--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -73,6 +73,7 @@
         
         <section class="article">
             <h3>Article By Joshua Fullmer</h3>
+            <img src="images/blossom-flowers.jpg" alt="blossoms">
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing orci. Phasellus dignissim purus vel urna.<br>
                 Nam nec neque sit amet nibh egestas commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum wisi wisi, viverra eu, pellentesque eget, tincidunt eu, justo. Fusce ac risus at wisi malesuada convallis. Proin vel mauris ac lorem mattis molestie. Phasellus vel velit ut erat faucibus laoreet.<br>
@@ -87,7 +88,7 @@
                 Fusce id nibh. In mi. Donec tempor. Duis turpis. Vestibulum ut diam nec velit dictum eleifend. Pellentesque augue. Mauris varius tempus ante. Nulla in lectus. Nunc tristique. Praesent eu ipsum ut wisi lacinia mattis. Duis luctus elit vel dui. Proin vestibulum vulputate nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.<br>
                 Vivamus mi. Sed eu neque vitae ipsum condimentum adipiscing. Integer pulvinar adipiscing tellus. Nullam suscipit interdum mi. Sed eleifend, dolor non aliquam pharetra, pede nunc semper mi, nec rhoncus mi est eu ante. In vestibulum. Ut ut ante vel tellus malesuada imperdiet. Suspendisse id orci. Suspendisse lacinia, est a pretium rutrum, nibh elit commodo ligula, id luctus velit elit quis massa. Nulla diam. Nulla sit amet libero. Maecenas adipiscing imperdiet justo. Maecenas justo purus, malesuada vitae, volutpat nec, dignissim vel, ligula.<br>
             </p>
-            <img src="images/blossom-flowers.jpg" alt="blossoms">
+            <img class="small" src="images/blossom-flowers.jpg" alt="blossoms">
         </section>
 
         <section class="mapcontact">
