--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -81,9 +81,17 @@
                 Donec odio. Nulla mollis, massa eget auctor viverra, eros lorem posuere metus, vel sodales wisi lectus et ligula. Maecenas suscipit metus sed nisl. Maecenas consectetuer purus et felis. Aliquam in tellus sit amet augue vehicula vestibulum. Fusce purus felis, suscipit eget, euismod sit amet, laoreet a, neque.<br>
             </p>
         </section>
-        
+
         <section class="mapcontact">
             <h3>Contact Information</h3>
+            <div class="map">
+                <img src="images/prestonmap.JPG" alt="preston map">
+            </div>
+            <div class="contact">
+                <p>
+                    
+                </p>
+            </div>
         </section>
     </main>
     <footer>
