--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -89,8 +89,34 @@
             </div>
             <div class="contact">
                 <p>
-                    
+
                 </p>
+                <div class="socials">
+                    <a href="https://www.facebook.com/" target="_blank">
+                      <img
+                        src="images/social-facebookicon.png"
+                        alt="facebook icon"
+                      />
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                      <img
+                        src="images/social-twittericon.png"
+                        alt="twitter icon"
+                      />
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                      <img
+                        src="images/social-instaicon.png"
+                        alt="instagram icon"
+                      />
+                    </a>
+                    <a href="https://www.pinterest.com/" target="_blank">
+                      <img
+                        src="images/social-pininteresticon.png"
+                        alt="pinterest icon"
+                      />
+                    </a>
+                </div>
             </div>
         </section>
     </main>
