--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -83,8 +83,8 @@
         </section>
 
         <section class="mapcontact">
-            <h3>Contact Information</h3>
-            <div class="map">
+            <div>
+                <h3>Contact Information</h3>
                 <img src="images/prestonmap.JPG" alt="preston map">
             </div>
             <div class="contact">
