--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -89,7 +89,10 @@
             </div>
             <div class="contact">
                 <p>
-
+                    1234 W Street<br>
+                    City, ST 99999<br>
+                    999.999.9999<br>
+                    email@domain.com<br>
                 </p>
                 <div class="socials">
                     <a href="https://www.facebook.com/" target="_blank">
