--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -91,8 +91,8 @@
                 <p>
                     1234 W Street<br>
                     City, ST 99999<br>
-                    999.999.9999<br>
-                    email@domain.com<br>
+                    &phone; 999.999.9999<br>
+                    &#9993; email@domain.com<br>
                 </p>
                 <div class="socials">
                     <a href="https://www.facebook.com/" target="_blank">
