--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -39,7 +39,7 @@
     <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
-            <img src="images/bannerweather.jpg" alt="banner waterfall image">
+            <img src="images/bannerweather.jpg" alt="large waterfall banner">
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: Sunny</p>
@@ -61,11 +61,11 @@
                     <th>Friday</th>
                 </tr>
                 <tr>
-                    <td><img src="images/sunny.png" alt="sun image"><br>80°F</td>
-                    <td><img src="images/cloudy.png" alt="cloudy image"><br>72°F</td>
-                    <td><img src="images/lightrain.png" alt="light rain image"><br>63°F</td>
-                    <td><img src="images/heavyrain.png" alt="heavy rain image"><br>54°F</td>
-                    <td><img src="images/stormy.png" alt="storm image"><br>51°F</td>
+                    <td><img src="images/sunny.png" alt="sun icon"><br>80°F</td>
+                    <td><img src="images/cloudy.png" alt="cloudy icon"><br>72°F</td>
+                    <td><img src="images/lightrain.png" alt="light rain icon"><br>63°F</td>
+                    <td><img src="images/heavyrain.png" alt="heavy rain icon"><br>54°F</td>
+                    <td><img src="images/stormy.png" alt="storm icon"><br>51°F</td>
                 </tr>
                 
             </table>
