--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -40,7 +40,7 @@
     <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
-            <img src="images/bannerweather.jpg" alt="large waterfall banner">
+            <img src="images/wdd230_image_franklinOriginal.jpeg" alt="large waterfall banner">
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: Sunny</p>
