--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -40,7 +40,10 @@
     <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
-            <img src="images/wdd230_image_franklinOriginal.jpeg" alt="large waterfall banner">
+            <picture>
+                <source srcset="images/franklinMed.jpg" media="min-width:">
+                <img src="images/franklinSmall.jpg" alt="large waterfall banner">
+            </picture>
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: Sunny</p>
