--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -41,7 +41,8 @@
         <h2>Preston Idaho</h2>
         <section class="summary">
             <picture>
-                <source srcset="images/franklinMed.jpg" media="min-width:">
+                <source srcset="images/franklinMed.jpg" media="(min-width: 223px) and (max-width: 224px)">
+                    <source srcset="images/franklinLarge.jpg" media="(min-width: 225px")>
                 <img src="images/franklinSmall.jpg" alt="large waterfall banner">
             </picture>
             <div id="weathersummary">
