--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -41,10 +41,9 @@
         <h2>Preston Idaho</h2>
         <section class="summary">
                 <picture>
-                    <source srcset="images/franklinLarge.jpg" media="(min-width: 225px")>
-                    <source srcset="images/franklinMed.jpg" media="(min-width: 200px)">
-                <img src="images/franklinSmall.jpg"
-                srcset="images/"
+                    <source srcset="images/franklinLarge.jpg" media="(min-width: 765px)">
+                    <source srcset="images/franklinMed.jpg" media="(min-width: 425px)">
+                    <img src="images/franklinSmall.jpg"
                     alt="preston hero banner">
                 >
             </picture>
