--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 
-<body onload="banner()">
+<body onload="banner()" >
     <aside id="banner" style="display: block">
         <p>Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
@@ -50,10 +50,10 @@
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: Sunny</p>
-                <p>High: 80°F</p>
-                <p>Wind Chill: 2°F</p>
+                <p>High: <span class="airspan"></span>°F</p>
+                <p>Wind Chill: <span class="windchillspan"></span>°F</p>
                 <p>Humidity: 43%</p>
-                <p>Wind: 2 mph</p>
+                <p>Wind: <span class="windspeedspan"></span> mph</p>
             </div>
         </section>
 
