--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-        <section class="forecast">
+        <section class="forecast" onload="chill()">
             <h3>5 Day Forecast</h3>
             <table>
                 <tr>
