--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -53,11 +53,11 @@
                 <p>High: <span class="airspan"></span>°F</p>
                 <p>Wind Chill: <span class="windchillspan"></span>°F</p>
                 <p>Humidity: 43%</p>
-                <p>Wind: <span class="windspeedspan"></span> mph</p>
+                <p>Wind: <span id="windspeedspan"></span> mph</p>
             </div>
         </section>
 
-        <section class="forecast" onload="chill()">
+        <section class="forecast">
             <h3>5 Day Forecast</h3>
             <table>
                 <tr>
