--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 
-<body onload="banner()" >
+<body  >
+    <!-- onload="banner()" -->
     <aside id="banner" style="display: block">
         <p>Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
@@ -49,8 +50,8 @@
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: Sunny</p>
-                <p>High: <span class="airspan"></span>°F</p>
-                <p>Wind Chill: <span class="windchillspan"></span>°F</p> 
+                <p>High: <span id="airspan"></span>°F</p>
+                <p>Wind Chill: <span id="windchillspan"></span></p> 
                 <p>Humidity: 43%</p>
                 <p>Wind: <span id="windspeedspan"></span> mph</p>
             </div>
