--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="medium.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="#" rel="stylesheet">
 </head>
 <body>
     <div class="content">
@@ -37,6 +37,14 @@
             document.getElementById('update').innerHTML = document.lastModified;
         </script>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ['Neuton', 'Russo On', 'Taviraj', 'Lato', 'Open Sans']
+            }
+        });
+    </script>
 </body>
 
 </html>
