--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preston Idaho Weather</title>
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
-    <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap"
-        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap"
+        rel="stylesheet"> -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -142,6 +142,14 @@
     </footer>
     <script src="js/navagation.js"></script>
     <script src="js/windchill.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ['Neuton', 'Russo One', 'Taviraj',]
+            }
+        });
+    </script>
 </body>
 
 </html>
