--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 
-<body onload="banner()">
-    <!--  -->
+<body>
+    <!-- onload="banner()" -->
     <aside id="banner" style="display: block">
         <p>Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
