--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <li>Lesson 03: <a href="lesson3/index.html">Site Plan</a></li>
                 <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Idaho</a></li>
                 <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Idaho v2</a></li>
-                <li>Lesson 05: <a href="lesson6/preston-6.html">Preston Idaho v3</a></li>
+                <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Idaho v3</a></li>
+                <li>Lesson 07: <a href="lesson6/preston-7.html">Gallery Page</a></li>
             </ul>
         </main> 
         <footer>
