--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    <!-- onload="banner()" -->
-    <aside id="banner" style="display: block">
+    <!-- <aside id="banner" style="display: block">
         <p>Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
     <header>
@@ -147,7 +146,7 @@
                 families: ['Neuton', 'Russo One', 'Taviraj',]
             }
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
