--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,9 +8,7 @@
     <meta name="description" content="lazy loading practice page">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/small.css">
-    <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css">
+    <link rel="stylesheet" href="css/lazyload.css">
 </head>
 
 <body>
