--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- <aside id="banner" style="display: block">
+    <aside id="banner" style="display: block">
         <p>Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
     <header>
@@ -28,14 +28,14 @@
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="#" class="active">Preston</a></li>
+            <li><a href="preston-7.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery-7.html" class="active">Gallery</a></li>
         </ul>
     </nav>
-    <main>
+    <!-- <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
             <picture>
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </section>
-    </main>
+    </main> -->
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
@@ -146,7 +146,7 @@
                 families: ['Neuton', 'Russo One', 'Taviraj',]
             }
         });
-    </script> -->
+    </script> 
 </body>
 
 </html>
