--- a/lesson7/preston-7.html
+++ b/lesson7/preston-7.html
@@ -28,11 +28,11 @@
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="#" class="active">Preston</a></li>
+            <li><a href="preston-7.html" class="active">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
