--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Site Plan</a></li>
-                <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Idaho</a></li>
-                <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Idaho v2</a></li>
-                <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Idaho v3</a></li>
-                <li>Lesson 07: <a href="lesson6/lazyload.html">Lazy Load</a></li>
-                <li>Lesson 07: <a href="lesson6/gallery-7.html">Gallery Page</a></li>
+                <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Idaho Page</a></li>
+                <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Idaho Continued</a></li>
+                <li>Lesson 06: <a href="lesson6/preston-6.html">Responsive Images and Font</a></li>
+                <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a></li>
+                <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery Page</a></li>
             </ul>
         </main> 
         <footer>
