What am I doing wrong?

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Idaho Weather</title>
+    <title>Lazy Loading</title>
     <meta name="description" content="lazy loading practice page">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
