--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -14,33 +14,24 @@
 <body>
     <h1>Lazy Loading</h1>
     <picture>
-        <img src="images/300x400/placeholder-300x400.jpg" data-src="images/300x400/lilac_bushes_1.jpg" alt="lilac bushes">
+        <img src="images/placeholder-300x400.jpg" data-src="images/lilac_bushes_1.jpg" alt="lilac bushes">
     </picture>
     <picture>
-        <img src="images/300x400/placeholder-300x400.jpg" data-src="images/300x400/Yucca_gloriosa_in_clay_pot-300x400.jpg" alt="Yucca Gloriosa plant">
+        <img src="images/placeholder-300x400.jpg" data-src="images/Yucca_gloriosa_in_clay_pot-300x400.jpg" alt="Yucca Gloriosa plant">
     </picture>
     <picture>
-        <img src="images/300x400/placeholder-300x400.jpg" data-src="images/300x400/Hulls-Upper-300x400.jpg" alt="rolling hills">
+        <img src="images/placeholder-300x400.jpg" data-src="images/Hulls-Upper-300x400.jpg" alt="rolling hills">
     </picture>
     <picture>
-        <img src="images/300x400/placeholder-300x400.jpg" data-src="images/300x400/google-pixel-3a-camera-sample-outside-e1557903087482-300x400.jpg" alt="patio decor">
+        <img src="images/placeholder-300x400.jpg" data-src="images/google-pixel-3a-camera-sample-outside-e1557903087482-300x400.jpg" alt="patio decor">
     </picture>
     <picture>
-        <img src="images/300x400/placeholder-300x400.jpg" data-src="images/300x400/gluten-free-morning-glory-muffins-300x400.jpg" alt="gluten free muffins">
+        <img src="images/placeholder-300x400.jpg" data-src="images/gluten-free-morning-glory-muffins-300x400.jpg" alt="gluten free muffins">
     </picture>
     <picture>
-        <img src="images/300x400/placeholder-300x400.jpg" data-src="images/300x400/cover-1-300x400.jpg" alt="cool triangle design">
+        <img src="images/placeholder-300x400.jpg" data-src="images/cover-1-300x400.jpg" alt="cool triangle design">
     </picture>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script>
-        WebFont.load({
-            google: {
-                families: ['Neuton', 'Russo One', 'Taviraj',]
-            }
-        });
-    </script>
-    <script src="js/lazyload.html"></script>
+    <script src="js/lazyload.js"></script>
 </body>
 
 </html>
