--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -35,100 +35,65 @@
             <li><a href="gallery-7.html" class="active">Gallery</a></li>
         </ul>
     </nav>
-    <!-- <main>
-        <h2>Preston Idaho</h2>
-        <section class="summary">
-            <picture>
-                <source srcset="images/franklinLarge.jpg" media="(min-width: 765px)">
-                <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
-                <img src="images/franklinSmall.jpg" alt="preston hero banner">
-            </picture>
-
-            <div id="weathersummary">
-                <h3>Weather Summary</h3>
-                <p>Currently: Sunny</p>
-                <p>High: <span id="airspan"></span>°F</p>
-                <p>Wind Chill: <span id="windchillspan"></span></p> 
-                <p>Humidity: 43%</p>
-                <p>Wind: <span id="windspeedspan"></span> mph</p>
-            </div>
-        </section>
-
-        <section class="forecast">
-            <h3>5 Day Forecast</h3>
-            <table>
-                <tr>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                </tr>
-                <tr>
-                    <td><img src="images/sunny.png" alt="sun icon"><br>80°F</td>
-                    <td><img src="images/cloudy.png" alt="cloudy icon"><br>72°F</td>
-                    <td><img src="images/lightrain.png" alt="light rain icon"><br>63°F</td>
-                    <td><img src="images/heavyrain.png" alt="heavy rain icon"><br>54°F</td>
-                    <td><img src="images/stormy.png" alt="storm icon"><br>51°F</td>
-                </tr>
-
-            </table>
-        </section>
-
-        <section class="article">
-            <h3>Article By Joshua Fullmer</h3>
-            <picture>
-                <source srcset="images/blossom-flowersLarge.jpg" media="(min-width: 765px)">
-                <source srcset="images/blossom-flowersMed.jpg" media="(min-width: 500px)">
-                <img src="images/blossom-flowersSmall.jpg" alt="blossom flowers">
-            </picture>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula
-                lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing
-                orci. Phasellus dignissim purus vel urna.</p>
-            <p>Nam nec neque sit amet nibh egestas commodo. Vestibulum ante ipsum primis in faucibus orci luctus et
-                ultrices posuere cubilia Curae; Vestibulum wisi wisi, viverra eu, pellentesque eget, tincidunt eu,
-                justo. Fusce ac risus at wisi malesuada convallis. Proin vel mauris ac lorem mattis molestie. Phasellus
-                vel velit ut erat faucibus laoreet.</p>
-            <p>Nam scelerisque. Pellentesque et enim nec purus euismod suscipit. Vivamus lacus lacus, faucibus vel,
-                lobortis vel, scelerisque ac, purus. Maecenas dapibus. Fusce congue congue lorem. Aenean egestas, pede
-                vitae rhoncus vehicula, leo libero blandit justo, quis mattis arcu orci ac mi. Vivamus urna.</p>
-            <p>Donec odio. Nulla mollis, massa eget auctor viverra, eros lorem posuere metus, vel sodales wisi lectus
-                et ligula. Maecenas suscipit metus sed nisl. Maecenas consectetuer purus et felis. Aliquam in tellus sit
-                amet augue vehicula vestibulum. Fusce purus felis, suscipit eget, euismod sit amet, laoreet a,
-                neque.</p>
-        </section>
-
-        <section class="mapcontact">
+    <main>
+        <h2>Weather Gallery</h2>
+        <div class="gal-grid">
             <div>
-                <h3>Contact Information</h3>
-                <div class="map">
-                    <img src="images/prestonmap.JPG" alt="preston map">
-                </div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal1.jpg" alt="Sunny Snowy Road">
+                </picture>
+                <p>Sunny Snowy Road</p>
             </div>
-            <div class="contact">
-                <p>
-                    1234 W Street<br>
-                    City, ST 99999<br>
-                    &phone; 999.999.9999<br>
-                    &#9993; email@domain.com<br>
-                </p>
-                <div class="socials">
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <img src="images/social-facebookicon.png" alt="facebook icon" />
-                    </a>
-                    <a href="https://www.twitter.com/" target="_blank">
-                        <img src="images/social-twittericon.png" alt="twitter icon" />
-                    </a>
-                    <a href="https://www.instagram.com/" target="_blank">
-                        <img src="images/social-instaicon.png" alt="instagram icon" />
-                    </a>
-                    <a href="https://www.pinterest.com/" target="_blank">
-                        <img src="images/social-pininteresticon.png" alt="pinterest icon" />
-                    </a>
-                </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal2.jpg" alt="Beautiful Rolling Hills">
+                </picture>
+                <p>Beautiful Rolling Hills</p>
             </div>
-        </section>
-    </main> -->
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal3.jpg" alt="Snowy Road with Semi-Truck">
+                </picture>
+                <p>Snowy Road with Semi-Truck</p>
+            </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal4.jpg" alt="Snowy Golf Course">
+                </picture>
+                <p>Snowy Golf Course</p>
+            </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal5.jpg" alt="Snow Shoe Hike">
+                </picture>
+                <p>Snow Shoe Hike</p>
+            </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal6.jpg" alt="Green Field With Trees">
+                </picture>
+                <p>Green Field With Trees</p>
+            </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal7.jpg" alt="Snow-covered Pine Tree">
+                </picture>
+                <p>Snow-covered Pine Tree</p>
+            </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal8.jpg" alt="Broken Tree in Storm">
+                </picture>
+                <p>Broken Tree in Storm</p>
+            </div>
+            <div>
+                <picture>
+                    <img src="images/galplaceholder.jpg" data-src="images/gal9.jpg" alt="Abandoned Swing Set in a Park">
+                </picture>
+                <p>Abandoned Swing Set in a Park</p>
+            </div>
+        </div>
+    </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
@@ -143,10 +108,11 @@
     <script>
         WebFont.load({
             google: {
-                families: ['Neuton', 'Russo One', 'Taviraj',]
+                families: ['Neuton', 'Russo One', 'Taviraj', ]
             }
         });
-    </script> 
+    </script>
+    <script src="js/lazyload.js"></script>
 </body>
 
 </html>
