--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -40,6 +40,8 @@
         <div class="gal-grid">
             <div>
                 <picture>
+                    <source srcset="images/gal1lar" media="(min-width: 765px)">
+                    <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
                     <img src="images/galplaceholder.jpg" data-src="images/gal1.jpg" alt="Sunny Snowy Road">
                 </picture>
                 <p>Sunny Snowy Road</p>
