--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li>Lesson 06: <a href="lesson6/preston-6.html">Responsive Images and Font</a></li>
                 <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a></li>
                 <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery Page</a></li>
+                <li>Lesson 07: <a href="lesson8/gallery-8.html">Lesson 8</a></li>
             </ul>
         </main> 
         <footer>
