--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -12,7 +12,11 @@
 <body>
     <div class="container">
         <table>
-            <caption>ACME Wildwest</caption>
+            <caption></caption>
+            
+            <thead>
+                <th colspan="3">ACME Wildwest</th>
+            </thead>
             <thead>
                 <tr>
                     <td>Period</td>
@@ -39,7 +43,7 @@
                 <tr>
                     <td>November</td>
                     <td>&#36;8,610</td>
-                    <!-- <td>&#36;7,500</td> -->
+                    <td id="novgoal">&#36;7,500</td>
                 </tr>
                 <tr>
                     <td><em>Black Friday</em></td>
