--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Idaho Page</a></li>
                 <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Idaho Continued</a></li>
                 <li>Lesson 06: <a href="lesson6/preston-6.html">Responsive Images and Font</a></li>
-                <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a></li>
-                <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery Page</a></li>
-                <li>Lesson 07: <a href="lesson8/gallery-8.html">Lesson 8</a></li>
+                <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a><p> | </p><a href="lesson7/gallery-7.html">Gallery Page</a></li>
+                <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a><p> | </p></li>
             </ul>
         </main> 
         <footer>
