--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <table>          
             <thead>
                 <th colspan="3">ACME Wildwest</th>
