--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -28,10 +28,10 @@
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="preston-8.html" class="active">Preston</a></li>
+            <li><a href="preston-8.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="stormcenter.html" class="active">Storm Center</a></li>
             <li><a href="gallery-8.html">Gallery</a></li>
         </ul>
     </nav>
