--- a/lesson8/gallery-8.html
+++ b/lesson8/gallery-8.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Idaho Weather</title>
+    <title>Weather Gallery</title>
     <meta name="description" content="Gallery page from the 'Weather Me This' website.">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
