--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storm Center</title>
+    <title>Thank You!</title>
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
@@ -31,12 +31,13 @@
             <li><a href="preston-8.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="stormcenter.html" class="active">Storm Center</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery-8.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
-        
+        <h2>Thank you very much!</h2>
+        <p>Thank you so much for filling out this form! Your input is greatly valued.</p>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
