--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -36,7 +36,86 @@
         </ul>
     </nav>
     <main>
-        
+        <form method="GET" action="thanks.html" autocomplete="on">
+            <h2>Submit Local Weather</h2>
+            <p>Experiencing crazy weather? Let us know!</p>
+            <hr>
+            <fieldset>
+                <label>Full Name
+                    <input type="text" name="fullname" placeholder="Your full name" required><small>Please
+                    Type your full name, and insure that it is at least 5 characters.</small>
+                </label>
+                <label>Email
+                    <input type="email" name="email" placeholder="email@domain.com">
+                </label>
+                <label>Phone
+                    <input type="tel" name="phone" placeholder="+1(000)000-0000" required>
+                </label>
+                <label>Zip Code
+                    <input type="number" name="zip" required>
+                </label>
+            </fieldset>
+            <fieldset >
+                <label>Date of Storm
+                    <input type="date" name="stormdate">
+                </label>
+                <label>Type of Storm
+                    <input name="stormtype" list="stormtype">
+                    <datalist id="stormtype">
+                        <option value="Flash Flood">
+                        <option value="Hail">
+                        <option value="Hurricane">
+                        <option value="Blizzard">
+                        <option value="Lightning">
+                    </datalist>
+                </label>
+                <label for="rating">Storm Rating
+                    <input type="range" id="rating" value="1" min="1" max="10" step="1" list="rangeMarks"
+                        oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+                    <br><span id="ratingValue">1</span>
+                </label>
+                <datalist id="rangeMarks">
+                    <option value="0">
+                    <option value="1">
+                    <option value="2">
+                    <option value="3">
+                    <option value="4">
+                    <option value="5">
+                    <option value="6">
+                    <option value="7">
+                    <option value="8">
+                    <option value="9">
+                    <option value="10">
+                </datalist>
+                <label>Storm Region
+                    <select name="region">
+                        <option value="" disabled selected>Select Region ...</option>
+                        <option value="Preston">Preston</option>
+                        <option value="Soda Springs">Soda Springs</option>
+                        <option value="Fish Haven">Fish Haven</option>
+                    </select>
+                </label>
+            </fieldset>
+            <fieldset >
+                <p>Are you or the locals in danger?</p>
+                <label>
+                    <input type="radio" name="danger" value="yes">
+                    Yes
+                </label>
+                <label>
+                    <input type="radio" name="danger" value="maybe">
+                    Maybe
+                </label>
+                <label>
+                    <input type="radio" name="danger" value="no">
+                    No
+                </label>
+            </fieldset>
+            <label>Comments
+                <textarea placeholder="If you have anything else to tell us, please feel free to let us know!"></textarea>
+            </label>
+            <input type="submit" value="Report Weather">
+        </form>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
