--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stormcenter-small.css">
     <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css">>
+    <link rel="stylesheet" href="css/large.css">
 </head>
 
 <body>
