--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -69,7 +69,7 @@
                     </datalist>
                 </label>
                 <label for="rating">Storm Rating
-                    <input type="range" id="rating" value="1" min="1" max="10" list="rangeMarks"
+                    <input type="range" id="rating" value="1" min="1" max="10"
                         oninput="adjustRating(this.value)" onchange="adjustRating(this.value)"><span
                         id="ratingvalue">1</span>
                 </label>
