--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -36,7 +36,32 @@
         </ul>
     </nav>
     <main>
-        
+        <section id="homegrid">
+            <a href="preston-9.html">
+                <h2>Preston</h2>
+                <img src="#" alt="preston field">
+                <p>Home of Napoleon Dynamite</p>
+                <p>Year Founded: 1866</p>
+                <p>Current Population: 5204</p>
+                <p>Average Rainfall: 16.65</p>
+            </a>
+            <a href="#">
+                <h2>Soda Springs</h2>
+                <img src="#" alt="Soda Springs">
+                <p>Historic Oregon Trail Oasis. The Soda is on Us.</p>
+                <p>Year Founded: 1858</p>
+                <p>Current Population: 2985</p>
+                <p>Average Rainfall: 15.75</p>
+            </a>
+            <a href="#">
+                <h2>Fish Haven</h2>
+                <img src="#" alt="fish haven">
+                <p>This is Fish Heaven.</p>
+                <p>Year Founded: 1864</p>
+                <p>Current Population: 501</p>
+                <p>Average Rainfall: 14.20</p>
+            </a>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
@@ -52,7 +77,7 @@
     <script>
         WebFont.load({
             google: {
-                families: ['Neuton', 'Russo One', 'Taviraj',]
+                families: ['Neuton', 'Russo One', 'Taviraj', ]
             }
         });
     </script>
