prophet page complete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Lesson 06: <a href="lesson6/preston-6.html">Responsive Images and Font</a></li>
                 <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a> | <a href="lesson7/gallery-7.html">Gallery Page</a></li>
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
-                <li>Lesson 09: <a href="lesson9/index.html">Home Page</a> | <a href="#">Wireframe Sketches</a></li>
+                <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Practice</a> | <a href="lesson9/index.html">Home Page</a> | <a href="#">Wireframe Sketches</a></li>
             </ul>
         </main> 
         <footer>
