--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/homesmall.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
@@ -35,9 +35,11 @@
             <li><a href="gallery-9.html">Gallery</a></li>
         </ul>
     </nav>
+
     <main>
         <div class="cards"></div>
     </main>
+
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
@@ -46,6 +48,7 @@
             <span id="now"></span>
         </p>
     </footer>
+
     <script src="js/navagation.js"></script>
     <script src="js/towndata.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
