--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -17,12 +17,7 @@
         <div class="cards"></div>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
-            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
-        </p>
-        <p class="updateline">
-            <span id="now"></span>
-        </p>
+        <p>Joshua K. Fullmer | BYUI-Idaho | WDD 230</p>
     </footer>
     <script src="js/navagation.js"></script>
     <script src="js/prophets.js"></script>
