--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Site Plan</a></li>
-                <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Idaho Page</a></li>
-                <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Idaho Continued</a></li>
+                <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Page</a></li>
+                <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Page v2</a></li>
                 <li>Lesson 06: <a href="lesson6/preston-6.html">Responsive Images and Font</a></li>
                 <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a> | <a href="lesson7/gallery-7.html">Gallery Page</a></li>
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Practice</a> | <a href="lesson9/index.html">Home Page</a> | <a href="lesson9/indexwireframe.html">Wireframe Sketches</a></li>
+                <li>Lesson 10: <a href="lesson10/index.html">Preston Page v3</a></li>
             </ul>
         </main> 
         <footer>
