--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -46,10 +46,10 @@
 
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
-                <p>Currently: Sunny</p>
+                <p>Currently: <span id="current"></span></p>
                 <p>High: <span id="airspan"></span>°F</p>
                 <p>Wind Chill: <span id="windchillspan"></span></p> 
-                <p>Humidity: 43%</p>
+                <p>Humidity: <span id="humidity"></span></p>
                 <p>Wind: <span id="windspeedspan"></span> mph</p>
             </div>
         </section>
@@ -65,11 +65,11 @@
                     <th>Friday</th>
                 </tr>
                 <tr>
-                    <td><img src="images/sunny.png" alt="sun icon"><br>80°F</td>
-                    <td><img src="images/cloudy.png" alt="cloudy icon"><br>72°F</td>
-                    <td><img src="images/lightrain.png" alt="light rain icon"><br>63°F</td>
-                    <td><img src="images/heavyrain.png" alt="heavy rain icon"><br>54°F</td>
-                    <td><img src="images/stormy.png" alt="storm icon"><br>51°F</td>
+                    <td id="fdf11"><img src="images/sunny.png" alt="sun icon"><br>80°F</td>
+                    <td id="fdf12"><img src="images/cloudy.png" alt="cloudy icon"><br>72°F</td>
+                    <td id="fdf13"><img src="images/lightrain.png" alt="light rain icon"><br>63°F</td>
+                    <td id="fdf14"><img src="images/heavyrain.png" alt="heavy rain icon"><br>54°F</td>
+                    <td id="fdf15"><img src="images/stormy.png" alt="storm icon"><br>51°F</td>
                 </tr>
 
             </table>
@@ -138,7 +138,7 @@
         </p>
     </footer>
     <script src="js/navagation.js"></script>
-    <script src="js/windchill.js"></script>
+    <script src="js/weatherapi.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
         WebFont.load({
