--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load</a> | <a href="lesson7/gallery-7.html">Gallery Page</a></li>
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Practice</a> | <a href="lesson9/index.html">Home Page</a> | <a href="lesson9/indexwireframe.html">Wireframe Sketches</a></li>
-                <li>Lesson 10: <a href="lesson10/index.html">Preston Page v3</a></li>
+                <li>Lesson 10: <a href="lesson10/preston-10.html">Preston Page v3</a></li>
             </ul>
         </main> 
         <footer>
