--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -58,18 +58,18 @@
             <h3>5 Day Forecast</h3>
             <table>
                 <tr>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
+                    <th><span id="day0"></span></th>
+                    <th><span id="day1"></span></th>
+                    <th><span id="day2"></span></th>
+                    <th><span id="day3"></span></th>
+                    <th><span id="day4"></span></th>
                 </tr>
                 <tr>
-                    <td id="fdf11"><img src="images/sunny.png" alt="sun icon"><br>80°F</td>
-                    <td id="fdf12"><img src="images/cloudy.png" alt="cloudy icon"><br>72°F</td>
-                    <td id="fdf13"><img src="images/lightrain.png" alt="light rain icon"><br>63°F</td>
-                    <td id="fdf14"><img src="images/heavyrain.png" alt="heavy rain icon"><br>54°F</td>
-                    <td id="fdf15"><img src="images/stormy.png" alt="storm icon"><br>51°F</td>
+                    <td><img id= "fi0" src="" alt=""><br><span id="temp0"></span></td>
+                    <td><img id= "fi1" src="" alt=""><br><span id="temp1"></span></td>
+                    <td><img id= "fi2" src="" alt=""><br><span id="temp2"></span></td>
+                    <td><img id= "fi3" src="" alt=""><br><span id="temp3"></span></td>
+                    <td><img id= "fi4" src="" alt=""><br><span id="temp4"></span></td>
                 </tr>
 
             </table>
