--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -65,11 +65,11 @@
                     <th><span id="day4"></span></th>
                 </tr>
                 <tr>
-                    <td><img id= "fi0" src="" alt=""><br><span id="temp0"></span></td>
-                    <td><img id= "fi1" src="" alt=""><br><span id="temp1"></span></td>
-                    <td><img id= "fi2" src="" alt=""><br><span id="temp2"></span></td>
-                    <td><img id= "fi3" src="" alt=""><br><span id="temp3"></span></td>
-                    <td><img id= "fi4" src="" alt=""><br><span id="temp4"></span></td>
+                    <td><img id= "fi0" src="#" alt=""><br><span id="temp0"></span></td>
+                    <td><img id= "fi1" src="#" alt=""><br><span id="temp1"></span></td>
+                    <td><img id= "fi2" src="#" alt=""><br><span id="temp2"></span></td>
+                    <td><img id= "fi3" src="#" alt=""><br><span id="temp3"></span></td>
+                    <td><img id= "fi4" src="#" alt=""><br><span id="temp4"></span></td>
                 </tr>
 
             </table>
