--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Idaho Weather</title>
+    <title>Thank You!</title>
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/homesmall.css">
+    <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
@@ -27,19 +27,18 @@
     <nav>
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="preston-11.html">Preston</a></li>
-            <li><a href="sodasprings-11.html">Soda Springs</a></li>
-            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="preston-10.html">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-11.html">Gallery</a></li>
+            <li><a href="gallery-10.html">Gallery</a></li>
         </ul>
     </nav>
-
-    <main class="homemain">
-        <div class="cards"></div>
+    <main>
+        <h2>Thank you very much!</h2>
+        <p>Thank you so much for filling out this form! Your input is greatly valued.</p>
     </main>
-
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
@@ -48,14 +47,13 @@
             <span id="now"></span>
         </p>
     </footer>
-
     <script src="js/navagation.js"></script>
-    <script src="js/towndata.js"></script>
+    <script src="js/windchill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
         WebFont.load({
             google: {
-                families: ['Neuton', 'Russo One', 'Taviraj', ]
+                families: ['Neuton', 'Russo One', 'Taviraj',]
             }
         });
     </script>
