--- a/lesson10/thanks.html
+++ b/lesson10/thanks.html
@@ -27,12 +27,12 @@
     <nav>
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="preston-11.html">Preston</a></li>
-            <li><a href="sodasprings-11.html">Soda Springs</a></li>
-            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="preston-10.html">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-11.html">Gallery</a></li>
+            <li><a href="gallery-10.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
