--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -28,11 +28,11 @@
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="preston-10.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="preston-11.html">Preston</a></li>
+            <li><a href="sodasprings-11.html">Soda Springs</a></li>
+            <li><a href="fishhaven.html">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-10.html">Gallery</a></li>
+            <li><a href="gallery-11.html">Gallery</a></li>
         </ul>
     </nav>
 
