--- a/lesson11/preston-11.html
+++ b/lesson11/preston-11.html
@@ -30,7 +30,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="preston-11.html" class="active">Preston</a></li>
             <li><a href="sodasprings-11.html">Soda Springs</a></li>
-            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="iconshhaven.html">iconsh Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery-11.html">Gallery</a></li>
         </ul>
@@ -65,11 +65,11 @@
                     <th><span id="day5"></span></th>
                 </tr>
                 <tr>
-                    <td><img id= "fi1" src="#" alt=""><br><span id="temp1"></span></td>
-                    <td><img id= "fi2" src="#" alt=""><br><span id="temp2"></span></td>
-                    <td><img id= "fi3" src="#" alt=""><br><span id="temp3"></span></td>
-                    <td><img id= "fi4" src="#" alt=""><br><span id="temp4"></span></td>
-                    <td><img id= "fi5" src="#" alt=""><br><span id="temp5"></span></td>
+                    <td><img id= "icon1" src="#" alt=""><br><span id="temp1"></span></td>
+                    <td><img id= "icon2" src="#" alt=""><br><span id="temp2"></span></td>
+                    <td><img id= "icon3" src="#" alt=""><br><span id="temp3"></span></td>
+                    <td><img id= "icon4" src="#" alt=""><br><span id="temp4"></span></td>
+                    <td><img id= "icon5" src="#" alt=""><br><span id="temp5"></span></td>
                 </tr>
 
             </table>
