added new pages

--- a/lesson11/fishhaven-11.html
+++ b/lesson11/fishhaven-11.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Idaho Weather</title>
-    <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
+    <title>Fish Haven Idaho Weather</title>
+    <meta name="description" content="The Fish Haven Idaho page from the 'Weather Me This' website.">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -15,7 +15,7 @@
 
 <body>
     <aside id="banner" style="display: block">
-        <p>Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
+        <p>Saturday = Fish Haven Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
     <header>
         <img class="icon" src="images/weathericon.png" alt="weather me this logo">
@@ -30,18 +30,18 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="preston-11.html" class="active">Preston</a></li>
             <li><a href="sodasprings-11.html">Soda Springs</a></li>
-            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li><a href="fishhaven-11.html">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery-11.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Preston Idaho</h2>
+        <h2>Fish Haven Idaho</h2>
         <section class="summary">
             <picture>
                 <source srcset="images/franklinLarge.jpg" media="(min-width: 765px)">
                 <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
-                <img src="images/franklinSmall.jpg" alt="preston hero banner">
+                <img src="images/franklinSmall.jpg" alt="Fish Haven hero banner">
             </picture>
 
             <div id="weathersummary">
@@ -102,7 +102,7 @@
             <div>
                 <h3>Contact Information</h3>
                 <div class="map">
-                    <img src="images/prestonmap.JPG" alt="preston map">
+                    <img src="images/prestonmap.JPG" alt="Fish Haven map">
                 </div>
             </div>
             <div class="contact">
