--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Practice</a> | <a href="lesson9/index.html">Home Page</a> | <a href="lesson9/indexwireframe.html">Wireframe Sketches</a></li>
                 <li>Lesson 10: <a href="lesson10/preston-10.html">Preston Page v3</a></li>
+                <li>Lesson 11: <a href="lesson11/index.html">Completed Weather Site</a></li>
             </ul>
         </main> 
         <footer>
