--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -102,7 +102,7 @@
             <div>
                 <h3>Contact Information</h3>
                 <div class="map">
-                    <img src="images/prestonmap.JPG" alt="Fish Haven map">
+                    <img src="images/fishhavenmap.JPG" alt="Fish Haven map">
                 </div>
             </div>
             <div class="contact">
