--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -102,7 +102,7 @@
             <div>
                 <h3>Contact Information</h3>
                 <div class="map">
-                    <img src="images/prestonmap.JPG" alt="Soda Springs map">
+                    <img src="images/sodaspringsmap.JPG" alt="Soda Springs map">
                 </div>
             </div>
             <div class="contact">
