added events to all pages

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -43,7 +43,6 @@
                 <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
                 <img src="images/franklinSmall.jpg" alt="Fish Haven hero banner">
             </picture>
-
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: <span id="current"></span></p>
@@ -51,6 +50,10 @@
                 <p>Wind Chill: <span id="windchillspan"></span></p> 
                 <p>Humidity: <span id="humidity"></span></p>
                 <p>Wind: <span id="windspeedspan"></span> mph</p>
+            </div>
+            <div class="eventdiv">
+                <h3>Upcoming Events</h3>
+                <ul id="currentfevents"></ul>
             </div>
         </section>
 
