--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -43,7 +43,6 @@
                 <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
                 <img src="images/franklinSmall.jpg" alt="preston hero banner">
             </picture>
-
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: <span id="current"></span></p>
@@ -52,8 +51,11 @@
                 <p>Humidity: <span id="humidity"></span></p>
                 <p>Wind: <span id="windspeedspan"></span> mph</p>
             </div>
+            <div class="eventdiv">
+                <h3>Upcoming Events</h3>
+                <ul id="currentpevents"></ul>
+            </div>
         </section>
-
         <section class="forecast">
             <h3>5 Day Forecast</h3>
             <table>
