fishhaven img hero

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -39,7 +39,7 @@
         <h2>Fish Haven Idaho</h2>
         <section class="summary">
             <picture>
-                <source srcset="images/franklinLarge.jpg" media="(min-width: 765px)">
+                <source srcset="images/fishhavenLarge.jpg" media="(min-width: 765px)">
                 <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
                 <img src="images/franklinSmall.jpg" alt="Fish Haven hero banner">
             </picture>
