--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -40,8 +40,8 @@
         <section class="summary">
             <picture>
                 <source srcset="images/fishhavenLarge.jpg" media="(min-width: 765px)">
-                <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
-                <img src="images/franklinSmall.jpg" alt="Fish Haven hero banner">
+                <source srcset="images/fishhavenMed.jpg" media="(min-width: 500px)">
+                <img src="images/fishhavenSmall.jpg" alt="Fish Haven hero banner">
             </picture>
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
@@ -81,9 +81,9 @@
         <section class="article">
             <h3>Article By Joshua Fullmer</h3>
             <picture>
-                <source srcset="images/blossom-flowersLarge.jpg" media="(min-width: 765px)">
-                <source srcset="images/blossom-flowersMed.jpg" media="(min-width: 500px)">
-                <img src="images/blossom-flowersSmall.jpg" alt="blossom flowers">
+                <source srcset="images/gal6Large.jpg" media="(min-width: 765px)">
+                <source srcset="images/gal6Med.jpg" media="(min-width: 500px)">
+                <img src="images/gal6Small.jpg" alt="blossom flowers">
             </picture>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula
                 lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing
