--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -39,9 +39,9 @@
         <h2>Soda Springs Idaho</h2>
         <section class="summary">
             <picture>
-                <source srcset="images/franklinLarge.jpg" media="(min-width: 765px)">
-                <source srcset="images/franklinMed.jpg" media="(min-width: 500px)">
-                <img src="images/franklinSmall.jpg" alt="Soda Springs hero banner">
+                <source srcset="images/sodaspringsLarge.jpg" media="(min-width: 765px)">
+                <source srcset="images/sodaspringsMed.jpg" media="(min-width: 500px)">
+                <img src="images/sodaspringsSmall.jpg" alt="Soda Springs hero banner">
             </picture>
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
@@ -81,9 +81,9 @@
         <section class="article">
             <h3>Article By Joshua Fullmer</h3>
             <picture>
-                <source srcset="images/blossom-flowersLarge.jpg" media="(min-width: 765px)">
-                <source srcset="images/blossom-flowersMed.jpg" media="(min-width: 500px)">
-                <img src="images/blossom-flowersSmall.jpg" alt="blossom flowers">
+                <source srcset="images/gal9Large.jpg" media="(min-width: 765px)">
+                <source srcset="images/gal9Med.jpg" media="(min-width: 500px)">
+                <img src="images/gal9Small.jpg" alt="blossom flowers">
             </picture>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula
                 lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing
