--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -107,8 +107,8 @@
         </form>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
-            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        <p>
+            &copy; <span id="year"></span> Weather Me This | <a href="https://openweathermap.org/" target="_blank">Open Weather</a> | Joshua K. Fullmer 
         </p>
         <p class="updateline">
             <span id="now"></span>
