--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -40,8 +40,8 @@
         <p>Thank you so much for filling out this form! Your input is greatly valued.</p>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
-            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        <p>
+            &copy; <span id="year"></span> Weather Me This | <a href="https://openweathermap.org/" target="_blank">Open Weather</a> | Joshua K. Fullmer 
         </p>
         <p class="updateline">
             <span id="now"></span>
